--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
     "@tanstack/react-query": "^5.61.5",
-    "axios": "^1.7.8",
+    "axios": "^1.7.9",
     "expo": "~52.0.11",
     "expo-blur": "~14.0.1",
     "expo-constants": "~17.0.3",
@@ -32,6 +32,7 @@
     "expo-symbols": "~0.2.0",
     "expo-system-ui": "~4.0.4",
     "expo-web-browser": "~14.0.1",
+    "formik": "^2.4.6",
     "lottie-react-native": "7.1.0",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
@@ -45,6 +46,7 @@
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.2",
     "tailwindcss": "^3.4.15",
+    "yup": "^1.5.0",
     "zustand": "^5.0.1"
   },
   "devDependencies": {
