--- a/package.json
+++ b/package.json
@@ -47,7 +47,9 @@
     "react-native-webview": "13.12.2",
     "tailwindcss": "^3.4.15",
     "yup": "^1.5.0",
-    "zustand": "^5.0.1"
+    "zustand": "^5.0.1",
+    "expo-auth-session": "~6.0.1",
+    "expo-crypto": "~14.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
