--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "yup": "^1.5.0",
     "zustand": "^5.0.1",
     "expo-auth-session": "~6.0.1",
-    "expo-crypto": "~14.0.1"
+    "expo-crypto": "~14.0.1",
+    "@react-native-async-storage/async-storage": "1.23.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
