--- a/package.json
+++ b/package.json
@@ -16,13 +16,16 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
     "@tanstack/react-query": "^5.61.5",
     "axios": "^1.7.9",
     "expo": "~52.0.11",
+    "expo-auth-session": "~6.0.1",
     "expo-blur": "~14.0.1",
     "expo-constants": "~17.0.3",
+    "expo-crypto": "~14.0.1",
     "expo-font": "~13.0.1",
     "expo-haptics": "~14.0.0",
     "expo-linking": "~7.0.3",
@@ -38,6 +41,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.3",
+    "react-native-element-dropdown": "^2.12.2",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-reanimated": "~3.16.1",
@@ -48,9 +52,7 @@
     "tailwindcss": "^3.4.15",
     "yup": "^1.5.0",
     "zustand": "^5.0.1",
-    "expo-auth-session": "~6.0.1",
-    "expo-crypto": "~14.0.1",
-    "@react-native-async-storage/async-storage": "1.23.1"
+    "expo-image-picker": "~16.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
