--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "tailwindcss": "^3.4.15",
     "yup": "^1.5.0",
     "zustand": "^5.0.1",
-    "expo-image-picker": "~16.0.3"
+    "expo-image-picker": "~16.0.3",
+    "expo-print": "~14.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
