--- a/app.json
+++ b/app.json
@@ -37,11 +37,12 @@
       ],
       "expo-font",
       [
-         "expo-image-picker",
+        "expo-image-picker",
         {
           "photosPermission": "The app accesses your photos to let you share them with your friends."
         }
-      ]
+      ],
+      "expo-video"
     ],
     "experiments": {
       "typedRoutes": true
