--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "yup": "^1.5.0",
     "zustand": "^5.0.1",
     "expo-image-picker": "~16.0.3",
-    "expo-print": "~14.0.2"
+    "expo-print": "~14.0.2",
+    "expo-video": "~2.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
