--- a/package.json
+++ b/package.json
@@ -28,12 +28,15 @@
     "expo-crypto": "~14.0.1",
     "expo-font": "~13.0.1",
     "expo-haptics": "~14.0.0",
+    "expo-image-picker": "~16.0.3",
     "expo-linking": "~7.0.3",
+    "expo-print": "~14.0.2",
     "expo-router": "~4.0.9",
     "expo-splash-screen": "~0.29.13",
     "expo-status-bar": "~2.0.0",
     "expo-symbols": "~0.2.0",
     "expo-system-ui": "~4.0.4",
+    "expo-video": "~2.0.3",
     "expo-web-browser": "~14.0.1",
     "formik": "^2.4.6",
     "lottie-react-native": "7.1.0",
@@ -41,6 +44,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.3",
+    "react-native-dotenv": "^3.4.11",
     "react-native-element-dropdown": "^2.12.2",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
@@ -51,10 +55,7 @@
     "react-native-webview": "13.12.2",
     "tailwindcss": "^3.4.15",
     "yup": "^1.5.0",
-    "zustand": "^5.0.1",
-    "expo-image-picker": "~16.0.3",
-    "expo-print": "~14.0.2",
-    "expo-video": "~2.0.3"
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
