--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "react-native-webview": "13.12.2",
     "tailwindcss": "^3.4.15",
     "yup": "^1.5.0",
-    "zustand": "^5.0.1"
+    "zustand": "^5.0.1",
+    "expo-linear-gradient": "~14.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
