--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "expo-font": "~13.0.1",
     "expo-haptics": "~14.0.0",
     "expo-image-picker": "~16.0.3",
+    "expo-linear-gradient": "~14.0.1",
     "expo-linking": "~7.0.3",
     "expo-print": "~14.0.2",
     "expo-router": "~4.0.9",
@@ -52,11 +53,11 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.2",
+    "react-native-webview": "13.12.5",
+    "react-native-youtube-iframe": "^2.3.0",
     "tailwindcss": "^3.4.15",
     "yup": "^1.5.0",
-    "zustand": "^5.0.1",
-    "expo-linear-gradient": "~14.0.1"
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
