--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "expo": "~52.0.11",
     "expo-auth-session": "~6.0.1",
     "expo-blur": "~14.0.1",
-    "expo-constants": "~17.0.3",
+    "expo-constants": "~17.0.4",
     "expo-crypto": "~14.0.1",
     "expo-font": "~13.0.1",
     "expo-haptics": "~14.0.0",
@@ -57,7 +57,11 @@
     "react-native-youtube-iframe": "^2.3.0",
     "tailwindcss": "^3.4.15",
     "yup": "^1.5.0",
-    "zustand": "^5.0.1"
+    "zustand": "^5.0.1",
+    "expo-local-authentication": "~15.0.2",
+    "expo-dev-client": "~5.0.10",
+    "expo-notifications": "~0.29.12",
+    "expo-device": "~7.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
